# CrossChat

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
Tutorials/: CrossChatH_tutorial.ipynb  CrossChatH_tutorial_mouseskin.ipynb  CrossChatT_tutorial.ipynb  results.pkl
docs/: conf.py  index.rst  requirements.txt  tutorials.rst
docs/api/: crosschat.CrossChatH.Cluster_LRs.rst  crosschat.CrossChatH.Cluster_pathways.rst  crosschat.CrossChatH.Detect_active_pathways.rst  crosschat.CrossChatH.Detect_specific_LRs.rst  crosschat.CrossChatH.Draw_CCC_LR.rst  crosschat.CrossChatH.Draw_annotations_umap.rst  crosschat.CrossChatH.Multiscale_clustering.rst  crosschat.CrossChatH.Multiscale_clustering_spatial.rst  crosschat.CrossChatH.prepare_adata.rst  crosschat.CrossChatH.select_partitions.rst  crosschat.CrossChatT.Detect_trees.rst  crosschat.CrossChatT.Detect_trees_S.rst  crosschat.CrossChatT.Draw_CCC_between_MMT.rst  crosschat.CrossChatT.Draw_MMT.rst  crosschat.CrossChatT.Draw_MMT_lr_union.rst  crosschat.CrossChatT.Draw_annotations_umap.rst  crosschat.CrossChatT.Draw_big_tree.rst  crosschat.CrossChatT.find_interacting_trees.rst  crosschat.CrossChatT.plot_lr_frequency.rst  crosschat.CrossChatT.prepare_adata.rst  index.rst
docs/source/: conf.py  crosschat.rst  index.rst
src/CrossChat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crosschat/: CrossChatH.py  CrossChatT.py  Data_preparation.py  Multiple_trees.py  Visualization.py  __init__.py  requirements.txt  results.pkl
src/crosschat/Input_files/: human_cofactor_input.csv  (+5 more)
